<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/movie_thumb_img_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/movie_poster_bg_img_content_description"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@color/colorPrimary" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context="com.samcackett.popularmovies.movies.MovieDetailActivity"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/movie_detail_error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/apologies_something_went_wrong_fetching_movies"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:visibility="visible" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/movie_detail_card_view"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="4dp"
                android:layout_marginRight="8dp"
                card_view:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/card_thumbnail_image_view"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:cropToPadding="true"
                        android:contentDescription="@string/movie_poster_thumbnail_content_description"
                        android:layout_marginStart="0dp"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="0dp"
                        tools:src="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/card_release_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintLeft_toRightOf="@+id/card_thumbnail_image_view"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/card_release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        card_view:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp"
                        tools:text="2017"
                        card_view:layout_constraintLeft_toRightOf="@+id/card_release_title" />

                    <TextView
                        android:id="@+id/card_rating_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_rating"
                        card_view:layout_constraintLeft_toRightOf="@+id/card_thumbnail_image_view"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        card_view:layout_constraintTop_toBottomOf="@+id/card_release_title" />

                    <TextView
                        android:id="@+id/card_user_rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        card_view:layout_constraintTop_toBottomOf="@+id/card_release_date"
                        tools:text="5 stars"
                        card_view:layout_constraintLeft_toRightOf="@+id/card_rating_title"
                        android:layout_marginStart="8dp" />

                    <TextView
                        android:id="@+id/card_synopsis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="8dp"
                        card_view:layout_constraintTop_toBottomOf="@+id/card_thumbnail_image_view"
                        android:layout_marginRight="8dp"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintHorizontal_bias="0.522"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="8dp"
                        tools:text="This is the synopsis of a movie blah blah blah"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>